--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,9 @@ html {
     background: white;
     height: 65px;
     width: 550px;
+    white-space: nowrap;
     overflow: hidden;
-    border-style:solid;
+    border-style: solid;
     border-color: #DBDBDB;
     border-width: 2px 0 0 0;
 }
