--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,15 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+.App{
+    background-image: url('./assets/clipboard.jpg');
+    background-position: 50% -20%;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height:2000px;
+    width:100%;
+    padding-top: 12%;
+}
 .clearCompleted:focus{
 	outline:0;
 }
@@ -16,7 +25,7 @@ html {
     background: white;
     border: 0;
     padding: 10;
-    font-size: 12px;
+    font-size: 14px;
     cursor: pointer;
 }
 .bottomButton:hover{
@@ -24,6 +33,7 @@ html {
 	font-weight: bold;
 }
 .listEntry{
+    font-family: 'Indie Flower', cursive;
     padding: 20px;
     background: white;
     height: 65px;
@@ -31,7 +41,7 @@ html {
     white-space: nowrap;
     overflow: hidden;
     border-style: solid;
-    border-color: #DBDBDB;
+    border-color: #A1E1F6;
     border-width: 2px 0 0 0;
 }
 .inputBar:hover{
@@ -42,7 +52,7 @@ html {
 }
 .bottomBar{
 	border-style:solid;
-    border-color: #DBDBDB;
+    border-color: #A1E1F6;
     border-width: 2px 0 0 0;
 }
 button:focus{
