--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,10 @@ html {
     background-image: url('./assets/clipboard.jpg');
     background-position: 50% -20%;
     background-repeat: no-repeat;
-    background-size: 100%;
+    
     height:2000px;
     width:100%;
-    padding-top: 12%;
+    padding-top: 8%;
 }
 .clearCompleted:focus{
 	outline:0;
@@ -83,4 +83,23 @@ button:focus{
 .itemSpan{
     border: 0px solid #FB5E62;
     border-left-width: 2px;
+}
+.itemsLeft{
+    float: left;
+    height: 40px;
+    background: white;
+    border: 0;
+    padding: 10px;
+    font-size: 14px;
+    cursor: default;
+    text-indent: 4px;
+}
+.redLineBottom{
+    float: left;
+    display: inline-block;
+    height: 40px;
+    width: 2px;
+    background-color: #FB5E62;
+    position: relative;
+    left: 50px;
 }
